# problem_solving

./: .gitignore  1_100_check_dividation.py  README.md  capture_image_with_key.py  capture_image_with_key_RasPI.py  check_reset_commit.txt  closest number to the given number.py  copy_constructor.cpp  count_same_word.py  do_image_process.py  draw_pyramid.py  factorial.py  google_interview_list_1.py  interrupt_code.py  lambda_function.py  list_file_name_directory_and_subdirectory.py  moin_test.py  python_RE.py  shell_command.py  test_gui.py  uncommon_number.py  write_folder_name_in_a_file.py  yolo_training.txt
Online_Judge/: FrogJmp.py  PermMissingElem.py  Sock_Merchant.py  max_cycle_length.py  mx_bn_gp.py
Qt_CPP/: Declaring_Classes_and_Objects.cpp  Default_constructor_parameters.cpp  Referencing.cpp  array_function.cpp  class_mem_func.cpp  class_obj_argument_pointer_of_function.cpp  class_obj_as_argument_of_function.cpp  constructor_and_destructor.cpp  constructor_initialization_lists.cpp  default_constructor.cpp  deligating_constructor.cpp  dynamic_mem_allocation_1.cpp  heterogenous_container.cpp  mixed_operator.cpp  passing_object_as_call_by_reference.cpp  pointer_arrithmatic.cpp  pointer_dynamic_mem_allocation.cpp  pointer_udemy.cpp  practise_pointer_group.cpp  practise_pointer_stack_matrix.cpp  problem_in_reference.cpp  pub_pri_class.cpp  return_2D_Array.cpp  same_function_name_in_both_class.cpp  static_member_count_object.cpp  struct_vs_class.cpp
STL_practise/: find_word_req_unordered_map  find_word_req_unordered_map.cpp  list.cpp  map.cpp  set_difference.cpp
UVa_Online_Judge/: OddOccurrencesInArray.py  PermMissingElem.py  Sock_Merchant.py  cyclic_rotation.py  google_interview_list_1.py  max_binary_gap.py  max_cycle_length.py
c_practise/: 2_scientific_notations.c  3_char.c  different_operation_string.c  hello  pass_char_funct.c  practise_string.c  print_string  print_string.c  reverse_string.c  sprintf.c  sscanf.c  tempCodeRunnerFile.c  type_casting.c
cmake_learn/: hello.cpp
convert_yolo_folder/: convert.py  creation_obj_names_file.py
cpp_practise/: 1_test_constructor.cpp  ConstInClasses.cpp  Declaring_Classes_and_Objects.cpp  Default_constructor_parameters  Default_constructor_parameters.cpp  Inheritance_1.cpp  Referencing.cpp  Task_Enum_Struct.cpp  Virtual_function.cpp  add_complex_number.cpp  array_function.cpp  array_pass_to_a_function.cpp  bitwise_operator.cpp  bitwise_operator_1.cpp  break_continue.cpp  calling_fucc_from_another_class.cpp  calling_function_using_another_class.cpp  check_prime_num.cpp  class_mem_func.cpp  class_obj_argument_pointer_of_function.cpp  class_obj_array_as_arfument_of_fucntion.cpp  const_1.cpp  const_variable.cpp  constexpr.cpp  constructor_and_destructor.cpp  constructor_single_multi_task.cpp  copy_constructor_GeekforGeeks.cpp  corona.cpp  cpp_function_return.cpp  dynamic_mem_allocation_1.cpp  enum.cpp  factorial.cpp  fibonacci_series.cpp  fibonacci_series.py  fibonacci_with_recursion.cpp  friend_class.cpp  function_by_ref.cpp  imp_note.txt  increment_decrement.cpp  lambda_function_cpp.cpp  (+42 more)
cpp_practise/template/class_template_inherittance/: CMakeLists.txt  class_temp_abstract_header.cpp  class_temp_abstract_header.h  class_temp_abstract_header_main  class_temp_abstract_header_main.cpp
cpp_practise/template/class_template_inherittance/include/: class_temp_abstract_header.h
cpp_practise/template/class_template_inherittance/src/: class_temp_abstract_header.cpp  class_temp_abstract_header_main.cpp
cpp_problem_1/: first_c.cpp
data_structure/: bubble_sort.cpp  circle_array.cpp  doubly_linked_list.cpp  insertion_node_at_given_point_in_linked_list.cpp  linked_list  linked_list.cpp  linked_list_modify.cpp  push_insert_append_single_linked_list.cpp  queue_array.cpp  stack_DS.cpp
eNote_GmbH_task/: linked_list.py  make_reverse_linkedlist.py  reverse_linked_list.py  reverse_linked_list_old.py
first_gui/: readme.txt  test_gui.py
online_coding_test/: FirstNonRepeatedChar.cpp  FirstNonRepeatedChar_Class.cpp  TapeEquilibrium.py  binary_search_recursive.py  extend_list_google_coding.py  getting_missing_num.py  google_interview_list_1.py
project_cmake/: Configure_CMAKE_VSCode.md  way_to_compile_cmake.txt
project_cmake/do_sum_include_dir/: CMakeLists.txt
project_cmake/do_sum_include_dir/include/: foo.cpp  foo.hpp
project_cmake/do_sum_include_dir/src/: foo.cpp  main.cpp
project_cmake/fetch_variable_lib_only_test/: CMakeLists.txt
project_cmake/fetch_variable_lib_only_test/include/: do_process.h
project_cmake/fetch_variable_lib_only_test/src/: main.cpp
project_cmake/test/cmake_learn/: CMakeLists.txt
(+174 files in other folders)
